# cloud_identification

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp_identify_seungbu.cpp  pylib_tests.py  setup.py  tests.py
.github/workflows/: conda.yml
cmake/Modules/: FindNetCDF.cmake  Findpython.cmake
conda.recipe/: meta.yaml
doc/: cloud_merging_algorithm.aux  cloud_merging_algorithm.dvi  cloud_merging_algorithm.ps  cloud_merging_algorithm.tex  cols.eps  singleedge.eps
notebooks/: Creating dataset.ipynb  Output from identification.ipynb  Python interface example-Copy1.ipynb  Python interface example.ipynb  colfactor test.ipynb  minkowski.py  minkowski_test_data.py  scaling testing.ipynb  testing on LES output.ipynb
notebooks/.ipynb_checkpoints/: Output from identification-checkpoint.ipynb
src/: bindings.cpp  blitz_sort.cpp  blitz_sort.h  cloud_identification.cpp  cloud_identification.h  common.h  file_io.cpp  file_io.h  file_io_dummy.cpp  filters.cpp  filters.h  main.cpp  minkowski.cpp  minkowski.h
tests/: base.py  minkowski.py  test_filters.py  test_minkowski.py  test_ncfile.py  test_pylib.py  utils.py
